--- a/OpenGL_Project/OpenGL_Project.vcxproj.filters
+++ b/OpenGL_Project/OpenGL_Project.vcxproj.filters
@@ -24,94 +24,29 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="glad.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="shaderClass.cpp">
+    <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="VBO.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EBO.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="VAO.cpp">
+    <ClCompile Include="Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stb.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Texture.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Camera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Mesh.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Model.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Porori_LP.fbx">
+      <Filter>Resource Files\Model</Filter>
+    </None>
     <None Include="default.vert">
       <Filter>Resource Files\Shader</Filter>
     </None>
     <None Include="default.frag">
       <Filter>Resource Files\Shader</Filter>
     </None>
-    <None Include="light.frag">
-      <Filter>Resource Files\Shader</Filter>
-    </None>
-    <None Include="light.vert">
-      <Filter>Resource Files\Shader</Filter>
-    </None>
-    <None Include="pyramid.vert">
-      <Filter>Resource Files\Shader</Filter>
-    </None>
-    <None Include="pyramid.frag">
-      <Filter>Resource Files\Shader</Filter>
-    </None>
-    <None Include="plane.vert">
-      <Filter>Resource Files\Shader</Filter>
-    </None>
-    <None Include="plane.frag">
-      <Filter>Resource Files\Shader</Filter>
-    </None>
-    <None Include="Porori_LP.fbx">
-      <Filter>Resource Files\Model</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="shaderClass.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="VBO.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="EBO.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="VAO.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Mesh.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Model.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="1.png">
@@ -126,5 +61,10 @@
     <Image Include="planks.png">
       <Filter>Resource Files\Textures</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
