--- a/OpenGL_Project/OpenGL_Project.vcxproj.filters
+++ b/OpenGL_Project/OpenGL_Project.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
@@ -27,6 +23,10 @@
     </Filter>
     <Filter Include="Header Files\imgui">
       <UniqueIdentifier>{16ce14b8-8ca0-4fd3-a8f7-c392466d644a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +75,9 @@
     <ClCompile Include="Graphics\imgui\imgui_impl_glfw.cpp">
       <Filter>Resource Files\imgui</Filter>
     </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Porori_LP.fbx">
@@ -97,6 +100,18 @@
     </None>
     <None Include="screen.frag">
       <Filter>Resource Files\Shader</Filter>
+    </None>
+    <None Include="Graphics\model\Survival_BackPack_2.fbx">
+      <Filter>Resource Files\Model</Filter>
+    </None>
+    <None Include="basic.frag">
+      <Filter>Resource Files\Shader</Filter>
+    </None>
+    <None Include="basic.vert">
+      <Filter>Resource Files\Shader</Filter>
+    </None>
+    <None Include="Graphics\model\monkey.fbx">
+      <Filter>Resource Files\Model</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
