--- a/OpenGL_Project/imgui.ini
+++ b/OpenGL_Project/imgui.ini
@@ -1,10 +1,30 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=1004,576
 Size=400,400
 Collapsed=0
 
 [Window][OpenGL Window in imgui]
-Pos=101,126
-Size=308,460
+Pos=0,0
+Size=1440,1079
+Collapsed=0
+
+[Window][Main Model Window]
+Pos=0,0
+Size=1440,1080
+Collapsed=0
+
+[Window][Test]
+Pos=1440,540
+Size=480,540
+Collapsed=0
+
+[Window][MAIN RENDERING WINDOW]
+Pos=0,0
+Size=1440,1080
+Collapsed=0
+
+[Window][BASIC INFO]
+Pos=1440,0
+Size=480,540
 Collapsed=0
 
